--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -2,6 +2,7 @@ options:
   logging: CLOUD_LOGGING_ONLY
 
 steps:
+  # Step 1: Cleanup existing resources (best-effort)
   - name: 'gcr.io/cloud-builders/gcloud'
     entrypoint: 'bash'
     args:
@@ -15,15 +16,19 @@ steps:
         gcloud compute firewall-rules delete allow-ssh-from-iap --quiet || true
         gcloud compute networks delete my-vpc --quiet || true
 
+  # Step 2: Terraform init
   - name: 'hashicorp/terraform:1.6.6'
     args: ['init']
 
+  # Step 3: Terraform validate
   - name: 'hashicorp/terraform:1.6.6'
     args: ['validate']
 
+  # Step 4: Terraform apply
   - name: 'hashicorp/terraform:1.6.6'
     args: ['apply', '-auto-approve']
 
+  # Step 5: Extract web server external IP
   - name: 'hashicorp/terraform:1.6.6'
     entrypoint: 'sh'
     args:
@@ -32,13 +37,14 @@ steps:
         terraform output -raw web_server_external_ip > /workspace/ip.txt
         echo "Captured IP: $(cat /workspace/ip.txt)"
 
+  # Step 6: Run test script
   - name: 'curlimages/curl:7.87.0'
     entrypoint: 'sh'
     args:
       - '-c'
       - |
         IP=$(cat /workspace/ip.txt)
-        echo "Running test on http://$IP"
+        echo "Running health check on http://$IP"
         chmod +x ./run_test.sh
         ./run_test.sh $IP
 
