--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -13,17 +13,18 @@ steps:
       chmod +x test.sh
       ./test.sh
 
-# 2️⃣ Cleanup: Check for existing VM and delete if found
+# 2️⃣ Cleanup: Check for existing VM and delete if found (tolerate not found errors)
 - name: 'gcr.io/cloud-builders/gcloud'
   entrypoint: 'bash'
   args:
     - '-c'
     - |
       echo "🔍 Checking for existing VM..."
-      VM_EXISTS=$$(gcloud compute instances list --filter="name=web-server" --format="value(name)")
+      VM_EXISTS=$$(gcloud compute instances list --filter="name=web-server AND zone:(us-central1-a)" --format="value(name)")
       if [ "$$VM_EXISTS" != "" ]; then
-        echo "⚠️ Existing VM found: $$VM_EXISTS — deleting..."
-        gcloud compute instances delete web-server --zone=us-central1-a --quiet
+        echo "⚠️ Existing VM found: $$VM_EXISTS — attempting delete..."
+        gcloud compute instances delete web-server --zone=us-central1-a --quiet || \
+          echo "⚠️ VM not found at delete time — continuing."
       else
         echo "✅ No existing VM to delete."
       fi
