--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -10,12 +10,16 @@ steps:
       chmod +x test.sh
       ./test.sh
 
-# 2️⃣ Sleep + SCP app files using static SSH key
+# 2️⃣ Download SSH key + Sleep + SCP app files
 - name: 'gcr.io/cloud-builders/gcloud'
   entrypoint: 'bash'
   args:
     - '-c'
     - |
+      echo "⬇️ Downloading SSH key from Cloud Storage..."
+      gsutil cp gs://graphite-store-463414-p2_cloudbuild/cloudbuild_vm_key /workspace/cloudbuild_vm_key
+      chmod 400 /workspace/cloudbuild_vm_key
+
       echo "⏳ Sleeping 60 seconds for VM readiness..."
       sleep 60
 
@@ -25,7 +29,6 @@ steps:
           --zone=us-central1-a \
           --ssh-key-file=/workspace/cloudbuild_vm_key \
           --recurse \
-          --quiet \
           ./app/* \
           cloudbuild@web-server:/var/www/html && break || {
             echo "⚠️ Attempt $i failed. Retrying in 10s..."
@@ -43,7 +46,6 @@ steps:
       gcloud compute ssh \
         --zone=us-central1-a \
         --ssh-key-file=/workspace/cloudbuild_vm_key \
-        --quiet \
         cloudbuild@web-server \
         --command="sudo systemctl restart nginx && \
                    sudo apt-get update && \
@@ -55,3 +57,4 @@ timeout: 900s
 
 options:
   logging: CLOUD_LOGGING_ONLY
+  default_logs_bucket_behavior: REGIONAL_USER_OWNED_BUCKET
