--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -21,8 +21,9 @@ steps:
       gsutil cp gs://graphite-store-463414-p2_cloudbuild/cloudbuild_vm_key.pub /workspace/cloudbuild_vm_key.pub
       chmod 400 /workspace/cloudbuild_vm_key
 
+      echo "📌 Getting VM IP..."
       VM_IP=$(gcloud compute instances describe web-server --zone=us-central1-a --format='get(networkInterfaces[0].accessConfigs[0].natIP)')
-      echo "📌 VM IP: $VM_IP"
+      echo "📌 VM IP is $VM_IP"
 
       echo "⏳ Sleeping 60 seconds for VM readiness..."
       sleep 60
@@ -42,7 +43,9 @@ steps:
   args:
     - '-c'
     - |
+      echo "📌 Getting VM IP..."
       VM_IP=$(gcloud compute instances describe web-server --zone=us-central1-a --format='get(networkInterfaces[0].accessConfigs[0].natIP)')
+      echo "📌 VM IP is $VM_IP"
 
       echo "🔄 Restarting Nginx and enabling Cloud Logging agent..."
       ssh -i /workspace/cloudbuild_vm_key -o StrictHostKeyChecking=no cloudbuild@$VM_IP \
